# CLiTBot

./: .gitignore  CMakeLists.txt  README.md
doc/: info.md  todo.md  wiki.md
include/: const.h  modes.h  struct.h
maps/: Welcome-To-CLiTBot!.map  help.txt  help_cli.txt  starter.map  world-1.map
ops/: 1.ops  2.ops  t.ops
src/: a.out  const.h  constructors.cpp  imgdraw.cpp  interaction.cpp  main.cpp  main_bs.cpp  main_ex.cpp  modes.h  runtime.cpp  struct.h
src/testpoint/: testone.doc  testone.map  testthree.doc  testthree.map  testtwo.doc  testtwo.map
xcproj/: CMakeCache.txt  cmake_install.cmake
xcproj/CLiTBot.build/Debug/ZERO_CHECK.build/: Script-B54D903B12D00C632D6702D7.sh
xcproj/CLiTBot.xcodeproj/: project.pbxproj
xcproj/CLiTBot.xcodeproj/project.xcworkspace/xcuserdata/huangyanxing.xcuserdatad/: UserInterfaceState.xcuserstate
xcproj/CLiTBot.xcodeproj/xcuserdata/huangyanxing.xcuserdatad/xcschemes/: xcschememanagement.plist
xcproj/CMakeScripts/: ReRunCMake.make
xcproj/include/: cmake_install.cmake
